Increased the permgen  http://albany/view/Narayana+BlackTie/job/narayana/95/console